--- a/BlogposterCMS/public/assets/scss/components/_grid-mode.scss
+++ b/BlogposterCMS/public/assets/scss/components/_grid-mode.scss
@@ -8,11 +8,12 @@ body.grid-mode {
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
     border: 1px dashed var(--user-color, #333);
     pointer-events: none;
     box-sizing: border-box;
     z-index: 1000;
-    will-change: transform, width, height;
 
     .bbox-handle {
       position: absolute;
