feat: update SCSS and CSS for designer app layout and functionality

--- a/BlogposterCMS/apps/designer/assets/scss/style.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/style.scss
@@ -1,7 +1,7 @@
-@import 'header';
-@import 'sidebar';
-@import 'widget-controls';
-@import 'widget-options-menu';
-@import 'widget-action-bar';
-@import 'widget-code-editor';
-@import 'canvas';
+@use 'header';
+@use 'sidebar';
+@use 'widget-controls';
+@use 'widget-options-menu';
+@use 'widget-action-bar';
+@use 'widget-code-editor';
+@use 'canvas';
